--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "1.0.2",
   "description": "Merge css rules (selectors) with PostCSS",
   "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "browserslist": "^4.16.3",
     "caniuse-api": "^3.0.0",
     "cssnano-util-same-parent": "^4.0.1",
-    "postcss": "^7.0.35",
-    "postcss-selector-parser": "^6.0.4"
+    "postcss": "^8.2.10",
+    "postcss-selector-parser": "^6.0.4",
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@types/caniuse-api": "^3.0.1",
     "@types/node": "^14.14.25"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
