--- a/package.json
+++ b/package.json
@@ -1,38 +1,64 @@
 {
   "name": "postcss-merge-rules-plus",
-  "version": "1.0.2",
-  "description": "Merge css rules (selectors) with PostCSS",
+  "version": "2.0.0",
+  "description": "PostCSS plugin for combining css rules (selectors) that have fully/partially identical declarations",
   "main": "dist/index.js",
+  "keywords": [
+    "postcss",
+    "css",
+    "postcss-plugin",
+    "postcss-merge-rules-plus"
+  ],
+  "scripts": {
+    "test": "jest --coverage && eslint ."
+  },
+  "author": "HeyMarco <31385284+heyymarco@users.noreply.github.com>",
+  "license": "MIT",
+  "repository": "heyymarco/postcss-merge-rules-plus",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "dependencies": {
-    "browserslist": "^4.16.3",
+    "browserslist": "^4.19.1",
     "caniuse-api": "^3.0.0",
     "cssnano-util-same-parent": "^4.0.1",
-    "postcss": "^7.0.35",
-    "postcss-selector-parser": "^6.0.4"
+    "postcss-selector-parser": "^6.0.9"
   },
   "devDependencies": {
-    "@types/caniuse-api": "^3.0.1",
-    "@types/node": "^14.14.25"
+    "@types/caniuse-api": "^3.0.2",
+    "@types/jest": "^27.4.0",
+    "clean-publish": "^3.4.2",
+    "eslint": "^8.0.1",
+    "eslint-plugin-jest": "^25.2.2",
+    "jest": "^27.3.1",
+    "postcss": "^8.3.11",
+    "ts-jest": "^27.1.3"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "peerDependencies": {
+    "postcss": "^8.3.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/heyymarco/postcss-merge-rules-plus.git"
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 2017
+    },
+    "env": {
+      "node": true,
+      "es6": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:jest/recommended"
+    ],
+    "rules": {
+      "jest/expect-expect": "off"
+    }
   },
-  "keywords": [
-    "css",
-    "rules",
-    "selectors",
-    "merge",
-    "combine",
-    "postcss"
-  ],
-  "author": "heymarco",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/heyymarco/postcss-merge-rules-plus/issues"
-  },
-  "homepage": "https://github.com/heyymarco/postcss-merge-rules-plus#readme"
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "statements": 100
+      }
+    },
+    "preset": "ts-jest/presets/js-with-ts"
+  }
 }
